Add application config

--- a/public/pages/payment/payment.html
+++ b/public/pages/payment/payment.html
@@ -34,7 +34,7 @@
     <hr />
     <div class="row">
     	<label class="col-sm-4 text-left">Total amount</label>
-    	<label class="col-sm-8 text-left">$ 5.00</label>
+    	<label class="col-sm-8 text-left">{{ price | currency }}</label>
     </div>
     <hr />
     <div clas="row">
